--- a/package.json
+++ b/package.json
@@ -13,36 +13,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "17.1.3",
-    "@angular/common": "17.1.3",
-    "@angular/compiler": "17.1.3",
-    "@angular/core": "17.1.3",
-    "@angular/forms": "17.1.3",
-    "@angular/platform-browser": "17.1.3",
-    "@angular/platform-browser-dynamic": "17.1.3",
-    "@angular/router": "17.1.3",
+    "@angular/animations": "17.2.4",
+    "@angular/common": "17.2.4",
+    "@angular/compiler": "17.2.4",
+    "@angular/core": "17.2.4",
+    "@angular/forms": "17.2.4",
+    "@angular/platform-browser": "17.2.4",
+    "@angular/platform-browser-dynamic": "17.2.4",
+    "@angular/router": "17.2.4",
     "angular-in-memory-web-api": "~0.17.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.0"
+    "rxjs": "~7.8.1",
+    "tslib": "^2.6.2",
+    "zone.js": "~0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.1.3",
-    "@angular/cli": "17.1.3",
-    "@angular/compiler-cli": "17.1.3",
-    "@types/jasmine": "~5.1.0",
-    "@types/node": "^16.11.35",
+    "@angular-devkit/build-angular": "^17.2.3",
+    "@angular/cli": "17.2.3",
+    "@angular/compiler-cli": "17.2.4",
+    "@types/jasmine": "~5.1.4",
+    "@types/node": "^20.11.25",
     "copyfiles": "^2.4.1",
-    "jasmine-core": "~5.1.0",
+    "jasmine-core": "~5.1.2",
     "jasmine-marbles": "~0.9.2",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.4.0",
+    "karma": "~6.4.3",
     "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
+    "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~10.9.0",
-    "typescript": "~4.9.3"
+    "protractor": "^7.0.0",
+    "ts-node": "~10.9.2",
+    "typescript": "5.3"
   }
 }
